k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: concesionario-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: concesionario.local  # Para pruebas, luego pones dominio real o IP
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: concesionario-service
            port:
              number: 80
